--- a/footer.html
+++ b/footer.html
@@ -3,25 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Website Footer</title>
+    <link rel="stylesheet" href="footer.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
-  <link
-    href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
-    rel="stylesheet"
-    integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
-    crossorigin="anonymous"
-  />
-  <script
-    src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO"
-    crossorigin="anonymous"
-  ></script>
-  <link rel="stylesheet" href="footer.css" />
   <body>
-   <div class="footer">
-    <div class="footer1">
-        li
-    </div>
-   </div>
+    <footer class="footer">
+      <div class="footer-section contact-info">
+        <h3>VitalCare Hospital</h3>
+        <p>📞 +91 8501850389</p>
+        <p>
+          📧
+          <a href="mailto:vitalcareclinic@vitalcareclinic.org">
+            vitalcareclinic@vitalcareclinic.org
+          </a>
+        </p>
+      </div>
+
+      <div class="footer-section social-media">
+        <h3>Follow Us</h3>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
+
+      <div class="footer-section specialities">
+        <h3>Specialities</h3>
+
+        <li>General Medicine</li>
+        <li>Cardiology</li>
+        <li>Orthopedics</li>
+        <li>Neurology</li>
+        <li>Pediatrics</li>
+      </div>
+    </footer>
   </body>
 </html>
